--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Photo Gallery</title>
-    <link rel="stylesheet" href="css/gallery.css">
-    <script src="js/gallery.js"></script>
+    <link rel="stylesheet" href="gallery.css">
+    <script src="gallery.js"></script>
 </head>
 
 <body>
@@ -25,5 +25,6 @@
         onmouseover="upDate(this)" onmouseout="unDo()">
 
 </body>
+
 
 </html>
